--- a/TECHFINE 60A.html
+++ b/TECHFINE 60A.html
@@ -13,7 +13,7 @@
       theme: {
         extend: {
           colors: {
-            'dark-bg': '#0D1117',      // Sangat Gelap (Hampir Hitam)
+            'dark-bg': '#000000',      // Sangat Gelap (Sangat Hitam)
             'card-bg': '#161B22',      // Abu-abu Gelap (Untuk Panel)
             'accent-main': '#FF7F00',  // Cyan Terang (Primary Accent - Menonjol)
             'accent-secondary': '#FF0000', // Biru Langit (Secondary Accent)
@@ -169,7 +169,7 @@
           <!-- Data cards will be inserted here by MQTT -->
           <!-- Contoh Card Awal -->
             <div class="data-card bg-card-bg rounded-lg p-3 shadow-md border-l-4 border-accent-secondary transition-transform duration-300 hover:scale-[1.03] hover:bg-card-bg/80">
-              <h4 class="text-xs font-semibold uppercase text-gray-400 mb-0.5">Volt PV</h4>
+              <h4 class="space-text-xs font-semibold uppercase text-white-400 mb-0.5">Volt PV</h4>
               <div class="data-value text-xl font-extrabold text-accent-secondary">0.00 V</div>
             </div>
         </div>
@@ -713,6 +713,7 @@
   </script>
 </body>
 </html>
+
 
 
 
