--- a/BMS.html
+++ b/BMS.html
@@ -192,12 +192,10 @@
         <!-- Dropdown Menu -->
         <div id="dropdownMenu"
           class="absolute right-0 mt-2 w-44 bg-white text-gray-800 rounded-lg shadow-lg hidden">
-            <a id="batteryConfigLink" href="#" class="block px-4 py-2 hover:bg-gray-100">⚙️ Device Config</a>
             <a id="networkBtn" href="#" class="block px-4 py-2 hover:bg-gray-100">📡 Network</a>
-            <a id="timerLink" href="#" class="block px-4 py-2 hover:bg-gray-100">⏱ Timer</a>
+            <a id="pollingState" href="#" class="block px-4 py-2 hover:bg-gray-100">PollingState</a>
           <hr class="my-1">
           <a id="themeToggleLink" href="#" class="block px-4 py-2 hover:bg-gray-100">🌙 Dark Mode</a>
-          <a id="backgroundBtn" href="#" class="block px-4 py-2 hover:bg-gray-100">🖼️ Ganti Background</a>
         </div>
       </div>
     </div>
@@ -929,6 +927,7 @@ themeToggleLink.addEventListener('click', (e) => {
 </body>
 
 </html>
+
 
 
 
